--- a/_posts/2016-01-26-Week-1.md
+++ b/_posts/2016-01-26-Week-1.md
@@ -15,7 +15,8 @@ time in America, and I was very intrigued by the standard of the class and what
 the lecturers would be like.
 
 
-1.What did you do this past week?
+*1.What did you do this past week?*
+
 In the first week of class we went through some introductory material
 and were given a brief overview of python. It was very clear early on that
 this class would be quite interactive, which is very different to my
@@ -24,11 +25,13 @@ to see the thought process of other students expressed throughout. We had the
 first of our daily class quizzes, which ensure that we do the readings
 specified.
 
-#2.What's in your way?
+*2.What's in your way?*
+
 We have received our first project, the collatz problem. We should be getting
 stuck into it early next week I expect.
 
-3.What will you do next week?
+*3.What will you do next week?*
+
 Next week we will work more extensively on the current project and get
 an insight into deeper python concepts. I think we'll also be doing some
 testing and working with test frameworks.
@@ -38,7 +41,7 @@ My impression of the class so far is that it seems in depth and I really like
 the lecturers teaching method. He teaches in a way that I find different but
 intuitive to pick up the concepts he teaches.
 
-Tip of the week
+*Tip of the week*
 My tip for the week is more of a productivity tip than a software
 engineering tip but I still think it applies. I recommend investing in
 a high quality pair of headphones or earphones. As long as they have active
