added week 3 post

--- a/_posts/2016-01-31-Week-3.md
+++ b/_posts/2016-01-31-Week-3.md
@@ -9,13 +9,13 @@ tags: [weekly posts]
 **1.What did you do this past week?**
 
 This week I completed my Collatz project without too many issues in the final
-parts. In class we finished off exceptions and took one last look at testing
-code that performs the same task but in different ways. This gave me an insight
+parts. In class we finished off exceptions and took a look at testing code
+that performs the same task using different methods. This gave me an insight
 into a very convenient way to test the efficiency of your code. We then looked
-at a few python concepts such as various types and operators. We looked briefly
+at a few Python concepts such as various types and operators. We looked briefly
 at stacks and how certain programming methods such as recursion can run into
 issues with it. We finished off the week looking at different data structures
-in the python language such as tuples and dictionaries.
+in the Python language such as tuples and dictionaries.
 
 
 **2.What's in your way?**
