added week 3 post

--- a/_posts/2016-01-31-Week-3.md
+++ b/_posts/2016-01-31-Week-3.md
@@ -34,8 +34,8 @@ for us.
 
 I'm really happy with how I've settled into the course this week, completing the
 first assignment without receiving an e-mail saying I broke the graders script
-was nice. Coming into the course from another university made me nervous as to
-what to expect. But I feel comfortable now in my abilities to get through this
+was nice. Coming into the course from another university made me nervous about
+to what to expect. But I feel comfortable now in my abilities to get through this
 course.
 
 **Tip of the week**
