--- a/_posts/2016-02-21-Week-5.md
+++ b/_posts/2016-02-21-Week-5.md
@@ -6,8 +6,6 @@ categories: posts
 tags: [weekly posts]
 ---
 
-DRAFT
-
 **1.What did you do this past week?**
 
 This week myself and my coding partner completed our Netflix program with a
@@ -16,15 +14,33 @@ quite late with only 4 days until the deadline. We got it all working
 but then we added an assertion which we didn't test and submitted the assignment
 with an assertion error. We were slightly annoyed that we neglected testing
 this but it's only 20% in the grand scheme and we are pretty confident with
-the rest of our program.
+the rest of our program. The most interesting thing we learned about python
+this week was definitely 'yield', I had used it before in my functional
+programming class back home last semester, but I didn't realize it was possible
+in python. We also read two papers about software issues in missile
+tracking systems used in Saudi Arabia. The system was designed to handle
+missiles at around MACH 2, and the exposure of them to MACH 5 missiles caused
+an error in precision to have serious consequences.
 
 **2.What's in your way?**
 
-As of right now we have the date of our midterm which is Thursday week.
+As of right now we have the date of our midterm which is Thursday week. I'm hoping
+to put in some good study for it this week as I won't have as much time to study
+next week. I really need to do well in this midterm as my quiz results are really
+lacking. So hopefully it goes ok.
 
 
 **3.What will you do next week?**
 
+Next week I expect we will continue into deeper parts of python but now that
+we've finished the second assignment I think we won't be given another until after
+the mid term.
 
 
 **Tip of the week**
+
+My tip this week is to get proficient in JavaScript as it was announced in the
+bi-annual rankings table as the most used programming language for the past
+6 months graphed between github and stackoverflow statistics. It has maintained
+this ranking over the past year. So it seems like it's a language it would do
+no harm to be competent in.
